# NakOS

./: .clang-format  .clangd  .gitignore  .nvim.lua  CMakeLists.txt  README.md  [  build_nak.sh
.cache/clangd/index/: kernel.cpp.12DDF236EFAF883B.idx  kernel.hpp.7ADEC6D5DC4373A2.idx
Arch/x86/: CMakeLists.txt  Descriptor.hpp  GDT.cpp  GDT.hpp  x86_init.cpp
Arch/x86/Boot/: CMakeLists.txt  boot.s  loader.ld
Arch/x86/Processor/: CMakeLists.txt  Descriptor.hpp  Descriptors.hpp  x86_init.cpp  x86_init.hpp
IsoDir/boot/grub/: grub.cfg
Kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp
Kernel/Boot/: boot.asm  boot.s  loader.ld
Kernel/CPU/: CPU.cpp  CPU.hpp  Descriptor.hpp
Kernel/Graphics/: CMakeLists.txt  GraphicTypes.cpp  GraphicTypes.hpp  Graphics.cpp  Graphics.hpp  GraphicsTypes.cpp  GraphicsTypes.hpp  Types.hpp
Kernel/Graphics/inc/: Graphics.hpp  GraphicsTypes.hpp
Kernel/Graphics/src/: Graphics.cpp  GraphicsTypes.cpp
Kernel/Processor/: CMakeLists.txt  Descriptor.cpp  Descriptor.hpp  GDT.cpp  GDT.hpp
Kernel/inc/: kernel.hpp
Kernel/src/: kernel.cpp
Lib/: Array.hpp  CMakeLists.txt
Scripts/: AllOS.sh  Everything.sh  RunOS.sh  SetupIso.sh  cmake-build.sh
Toolchain/: TOOLCHAIN.md  install-toolchain.sh  os-dev-toolchain.cmake
Utilities/: Array.hpp
